--- a/main.html
+++ b/main.html
@@ -3,11 +3,34 @@
 <html>
 
 <head>
+	    <style>
+        .questions {
+            background-color: #f8fffe;
+            height: 50px;
+            margin-top: 20px;
+            padding: 15px;
+            max-width: 600px;
+            border-left: 8px solid green;
+            display: flex;
+            align-items: center;
+        }
+    </style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	    <blockquote class="questions">
+        <p>Who was the first female to become the governor of an Indian state?</p>
+    </blockquote>
+
+    <blockquote class="questions">
+        <p>Who among the first women climbed Mount Everest twice?</p>
+    </blockquote>
+
+    <blockquote class="questions">
+        <p>Who is the President of India?</p>
+    </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
