--- a/main.html
+++ b/main.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	    <style>
-        .questions {
-            background-color: #f8fffe;
-            height: 50px;
-            margin-top: 20px;
-            padding: 15px;
-            max-width: 600px;
-            border-left: 8px solid green;
-            display: flex;
-            align-items: center;
-        }
-    </style>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		.questions{
+        background-color: #f8fffe;
+        height: 50px;
+        margin-top:20px;
+        padding:15px;
+        max-width: 600px;
+        border-left:8px solid green;
+      }
+	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	    <blockquote class="questions">
-        <p>Who was the first female to become the governor of an Indian state?</p>
-    </blockquote>
-
+	 <body>
     <blockquote class="questions">
-        <p>Who among the first women climbed Mount Everest twice?</p>
+      <p>Who was the first female to become the governor of an Indian state?</p>
     </blockquote>
-
+    
     <blockquote class="questions">
-        <p>Who is the President of India?</p>
+      <p>Who among first Woman to climb Mount Everest twice?</p>
     </blockquote>
+    
+    <blockquote class="questions">
+      <p>Who is President of India?
+    </p>
+    </blockquote>
+  </body>
     <script type="text/javascript" src="./script.js">
 </script>
 
